# Wolf-run

./: .gitignore  README.md  stack.yaml  wolf-run.cabal
app/: Main.hs
src/: GameLoop.hs  GameState.hs  Obstacle.hs  Wolf.hs
