cabal-version:       >=1.10
name:                wolf-run
version:             0.1.0.0
build-type:          Simple

executable wolf-run
  hs-source-dirs:      app, src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >= 4.7 && < 5,
      brillo,
      brillo-juicy,
      bmp,
      brillo-rendering,
      random,
      containers,
      linear,   
      text

  other-modules: 
      GameLoop
      GameState
      Wolf
      Obstacle